--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ homepage: https://github.com/flutterchina/cookie_jar
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+dependencies:
+  universal_io: ^2.0.4
+
 dev_dependencies:
   test: ^1.16.3
   pedantic: ^1.10.0
